# textchecker

./: Procfile  README.md  get_resources.sh  pyproject.toml  requirements.txt  setup.sh
data/: demo.txt  livedoor_corpus_dict.json
src/: annotation_color_config.py  calculate_idf_score.py  text_checker.py
src/module_appearance/: appearance_funcs.py
src/module_expression/: calculate_idf_score.py  config.py  find_overused_word.py  get_synonym.py  livedoor_corpus_dict.json  overused_funcs.py  preparation.py  utils.py
src/module_length/: length_checker.py  length_funcs.py  proofread_with_chatgpt.py  punctuation.py  templates.py
src/module_wordy/: tautological_expressions.jsonl  tautological_funcs.py  wordy_checker.py  wordy_expressions.jsonl  wordy_funcs.py
test/: test_length_funcs.py  test_wordy_funcs.py
