[tool.poetry]
name = "textchecker"
version = "0.1.0"
description = ""
authors = ["Syuko4omi <riorioblackcat@yahoo.co.jp>"]

[tool.poetry.dependencies]
python = "^3.9.13"
streamlit = "^1.20.0"
st-annotated-text = "^3.0.0"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
